--- a/SwiftQuiz/Storyboards/Base.lproj/Main.storyboard
+++ b/SwiftQuiz/Storyboards/Base.lproj/Main.storyboard
@@ -47,13 +47,22 @@
                                 <color key="textColor" red="0.92549026010000002" green="0.38823530080000002" blue="0.21568629149999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ver1.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uid-C5-JLe">
+                                <rect key="frame" x="137" y="20" width="24" height="10"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="8"/>
+                                <color key="textColor" red="0.27776892009999998" green="0.47843137250000001" blue="0.87752444730000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="rC5-d4-TwW"/>
                         <color key="backgroundColor" systemColor="labelColor"/>
                         <constraints>
+                            <constraint firstItem="rC5-d4-TwW" firstAttribute="trailing" secondItem="uid-C5-JLe" secondAttribute="trailing" constant="159" id="2Rg-co-Hkn"/>
                             <constraint firstItem="rC5-d4-TwW" firstAttribute="trailing" secondItem="rY2-OZ-RcN" secondAttribute="trailing" constant="112.5" id="4Pi-r0-hhz"/>
+                            <constraint firstItem="uid-C5-JLe" firstAttribute="top" secondItem="MVe-aR-N16" secondAttribute="top" constant="20" symbolic="YES" id="93U-9G-RW7"/>
                             <constraint firstItem="rC5-d4-TwW" firstAttribute="trailing" secondItem="5cT-mr-F6s" secondAttribute="trailing" constant="40" id="RQh-WH-IHz"/>
                             <constraint firstItem="E3a-Tb-Hiv" firstAttribute="top" secondItem="rC5-d4-TwW" secondAttribute="top" constant="40" id="ajq-Hi-Jfi"/>
+                            <constraint firstItem="uid-C5-JLe" firstAttribute="leading" secondItem="rC5-d4-TwW" secondAttribute="leading" constant="137" id="b7w-g2-TCB"/>
                             <constraint firstItem="E3a-Tb-Hiv" firstAttribute="leading" secondItem="rC5-d4-TwW" secondAttribute="leading" constant="100" id="eGw-tq-qDS"/>
                             <constraint firstItem="rC5-d4-TwW" firstAttribute="trailing" secondItem="E3a-Tb-Hiv" secondAttribute="trailing" constant="50" id="maa-DB-kwd"/>
                             <constraint firstItem="rY2-OZ-RcN" firstAttribute="leading" secondItem="rC5-d4-TwW" secondAttribute="leading" constant="26" id="r0C-gI-3X8"/>
